Fixing the CSS on tablet sizes

--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -65,6 +65,13 @@
     }
 }
 
+@media print, screen and (min-width: 768px) and (max-width: 1040px) {
+    .project-block{
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
 /* Desktop & Tablet */
 @media only screen and (min-width: 768px) {
     .project-block section ~ section {
