--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -30,6 +30,13 @@ section section ~ section{
     }
 }
 
+@media print, screen and (min-width: 768px) and (max-width: 1040px) {
+    body > section {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
 /* Desktop & Tablet */
 @media print, screen and (min-width: 768px) {
     body > section{
