--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,7 +15,7 @@ body {
     margin: 0 auto;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 500;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: .25px;
